# harrier

./: .gitignore  AGENTS.md  AUTH_OUTPUT_IMPROVEMENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  ROADMAP.md  captured.har  chrome-capture.har
.claude/commands/: build.md  check-deps.md  lint.md  review-har-spec.md  test.md
.github/workflows/: ci.yml  release.yml
crates/harrier-browser/: Cargo.toml
crates/harrier-browser/src/: cdp_session.rs  chrome_finder.rs  error.rs  launcher.rs  lib.rs  network_capture.rs  profile.rs
crates/harrier-cli/: Cargo.toml
crates/harrier-cli/src/: lib.rs  main.rs
crates/harrier-cli/src/commands/: analyze.rs  auth.rs  chrome.rs  completion.rs  config.rs  discover.rs  filter.rs  map.rs  mod.rs  profile.rs  proxy.rs  security.rs  stats.rs  summary.rs
crates/harrier-cli/tests/: analyze_command.rs  chrome_command.rs  completion_command.rs  filter_command.rs  profile_command.rs  stats_command.rs
crates/harrier-core/: Cargo.toml
crates/harrier-core/src/: error.rs  lib.rs
crates/harrier-core/src/analysis/: mod.rs  performance.rs  summary.rs
crates/harrier-core/src/filter/: host_matcher.rs  mod.rs
crates/harrier-core/src/har/: mod.rs  reader.rs  types.rs  writer.rs
crates/harrier-detectors/: Cargo.toml
crates/harrier-detectors/src/: app_types.rs  error.rs  lib.rs
crates/harrier-detectors/src/auth/: advanced_security.rs  analyzer.rs  events.rs  flows.rs  jwt.rs  methods.rs  mod.rs  saml.rs  security.rs  sessions.rs  summary.rs
crates/harrier-proxy/: Cargo.toml
crates/harrier-proxy/src/: cert.rs  error.rs  handler.rs  lib.rs  server.rs
docs/: decisions.md  proxy-setup.md
docs/plans/: 2024-11-17-chrome-implementation-plan.md  2024-11-17-chrome-integration-design.md  2024-11-18-cicd-optimization-design.md  2025-01-16-chrome-implementation-plan.md  2025-01-26-hawkscan-guidance-design.md
scripts/: release.sh
tests/fixtures/: mixed-http-versions.har  sample.har
