[workspace]
resolver = "2"
members = [
    "crates/harrier-cli",
    "crates/harrier-core",
    "crates/harrier-proxy",
    "crates/harrier-browser",
    "crates/harrier-detectors",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/kaakaww/harrier"
authors = ["StackHawk"]

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive", "cargo", "env"] }
console = "0.15"
indicatif = "0.17"

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP
hyper = { version = "1", features = ["full"] }
hyper-util = "0.1"
tower = "0.5"
tower-http = "0.5"
http = "1.0"
http-body-util = "0.1"

# TLS & Crypto
rustls = "0.23"
rcgen = "0.13"
rustls-pemfile = "2.0"

# Proxy
hudsucker = "0.20"

# Browser automation
chromiumoxide = "0.7"

# Utilities
regex = "1.10"
lazy_static = "1.4"
url = "2.5"
mime = "0.3"
base64 = "0.22"
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
glob = "0.3"

# Domain parsing
psl = "2.1"

# Testing
tempfile = "3.8"

# Internal crates
harrier-core = { path = "crates/harrier-core" }
harrier-proxy = { path = "crates/harrier-proxy" }
harrier-browser = { path = "crates/harrier-browser" }
harrier-detectors = { path = "crates/harrier-detectors" }
