[package]
name = "harrier-detectors"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Detection engines for security patterns and app types"

[dependencies]
# Internal
harrier-core = { workspace = true }

# Utilities
regex = { workspace = true }
lazy_static = { workspace = true }
url = { workspace = true }
mime = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
