[package]
name = "harrier-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "HTTP/HTTPS MITM proxy for HAR capture"

[dependencies]
# Internal
harrier-core = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# HTTP
hyper = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }

# TLS & Proxy
hudsucker = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
rustls-pemfile = { workspace = true }

# JSON
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# System utilities
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
